src/main/webapp/WEB-INF/resources/css/style.css
:root {
    --space-cadet-color: #1D2951;
    --baby-powder-color: #FCFCFC;
    --eucalyptus-color: #3DDC97;
    --pastel-red-color: #EF6461;
    --tea-rose-color: #F2CCC3;
    --yellow-color: #FFD401;
    --dogwood-color: #D90368;
    --fadein-time: 2s;
    --border-radius-1: 5px;
    --page-width: 90%;
}


/*---------------- HTML FONTS ----------------*/

h1,
h2,
h3,
h4,
p,
a {
    font-weight: 100;
}

h1,
h2,
h3,
h4,
a {
    margin-top: 0;
    font-family: "Maven Pro";
    color: var(--space-cadet-color);
}

h1 {
    font-size: 32px;
}

h2,
a {
    font-size: 24px;
}

h3,
a {
    font-size: 18px;
}

h4 {
    font-size: 16px;
    color: var(--eucalyptus-color);
}

p,
label,
input {
    font-family: "Open Sans";
}

p {
    font-size: 13px;
    color: dimgrey;
}


/*---------------- HTML WRAPPERS ----------------*/

.navbar-wrapper {
    position: fixed;
    width: 99vw;
    z-index: 1;
}


/*---------------- BUTTONS ----------------*/

.button {
    vertical-align: middle;
    display: inline-block;
    border-radius: 4px;
    border: 2px solid var(--baby-powder-color);
    color: var(--baby-powder-color);
    text-align: center;
    padding: .3em 0;
    min-width: 140px;
    transition: all 0.5s;
    cursor: pointer;
    margin: 1.5em;
    margin-top: 0;
    font-size: 18px;
}

.button span {
    cursor: pointer;
    display: inline-block;
    position: relative;
    transition: 0.5s;
}

.button span:after {
    content: '\00bb';
    position: absolute;
    opacity: 0;
    top: 0;
    right: -15px;
    transition: 0.5s;
}

.button:hover {
    color: var(--baby-powder-color);
}

.button:hover span {
    padding-right: 15px;
}

.button:hover span:after {
    opacity: 1;
    right: 0;
}

/*liked button for articles*/
.liked {
    background-color: var(--dogwood-color);
    color: var(--baby-powder-color);
}

.unliked {
    background-color: var(--space-cadet-color);
    color: var(--baby-powder-color);
}

/*---------------- PADDING ----------------*/

.ps-feature-header header {
    padding: 2em 0;
}


/* ALIGNMENT CLASSES */

.center {
    text-align: center;
}

.center img {
    text-align: center;
}

.left {
    text-align: left;
}

.right {
    text-align: right;
}


/*---------------- PAGE BANNER ----------------*/

.page-banner {
    padding-top: 4em;
    position: relative;
}

.page-banner img {
    text-align: center;
    width: 100vw
}

.page-banner .absolute-text {
    /* background: rgba(251, 251, 251, 0.5);*/
    width: 100%;
    text-align: center;
    color: white;
    font-size: 64px;
    position: absolute;
    top: 35%;
    height: 65%;
}

.page-banner .ps-search {
    width: 100%;
    text-align: center;
    position: absolute;
    top: 70%;
    height: 20%;
}


/*---------------- FORM / STYLE ----------------*/


/*h1 span {
    margin-top: 10px;
    display: block;
    font-weight: 300;
    font-size: 70%;
    line-height: 1.2;
}*/

.ps-question {
    border: 2px solid var(--dogwood-color);
    padding: 1em;
    position: relative;
    margin-bottom: 4em;
}

.ps-question h3 {
    position: absolute;
    top: -20px;
    background-color: #FFF;
    margin-bottom: 2em;
    padding: 0 .2em;
}

.ps-answers {
    text-align: center;
    padding: 1em 2em;
}

.ps-answers label {
    padding: 0 2em 1em 2em;
}

.ps-answers input {
    padding: 0 2em;
}

input[type='radio'] {
    display: none;
    cursor: pointer;
}

input[type='radio']:focus,
input[type='radio']:active {
    outline: none;
}

input[type='radio'] + label {
    cursor: pointer;
    display: inline-block;
    position: relative;
    padding-left: 25px;
    margin-right: 10px;
    color: var(--space-cadet-color);
}

input[type='radio'] + label:before,
input[type='radio'] + label:after {
    content: '';
    display: inline-block;
    width: 18px;
    height: 18px;
    left: 0;
    top: 2px;
    text-align: center;
    position: absolute;
}

input[type='radio'] + label:before {
    background-color: var(--space-cadet-color);
    -moz-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

input[type='radio'] + label:after {
    color: #fff;
}

input[type='radio']:checked + label:before {
    -moz-box-shadow: inset 0 0 0 10px var(--eucalyptus-color);
    -webkit-box-shadow: inset 0 0 0 10px var(--eucalyptus-color);
    box-shadow: inset 0 0 0 10px var(--eucalyptus-color);
}


/*Radio Specific styles*/

input[type='radio'] + label:before {
    -moz-border-radius: 10%;
    -webkit-border-radius: 10%;
    border-radius: 10%;
}

input[type='radio'] + label:hover:after,
input[type='radio']:checked + label:after {
    content: '\2713';
    position: absolute;
    top: 4px;
    font-size: 18px;
    line-height: 15px;
}

input[type='radio'] + label:hover:after {
    color: #c7c7c7;
}

input[type='radio']:checked + label:after,
input[type='radio']:checked + label:hover:after {
    color: #fff;
}

.isAnswered {
    border-color: var(--eucalyptus-color);
}


/*---------------- DETAIL----------------*/

hr {
    border-color: var( --eucalyptus-color);
    margin: 0em;
}

@media (max-width: 999px) {
    .ps-question h1 {
        margin-right: .8em;
    }
    .ps-answers {
        margin-top: 4em;
    }
}

/*---------------- Z-INDEX ----------------*/
.pushToFront{
    z-index: 10000;
}

.pushToBack{
    z-index: -1;
}

